# anamorphiqfdm

./: .gitignore  README.md  generate_anamorphic_mesh.py  pyproject.toml  reduce_geometry.py  render_anamorphic_views.py  view_rendering.py
